fix show blocks on mobile device

--- a/src/components/page/DynamicPage.module.css
+++ b/src/components/page/DynamicPage.module.css
@@ -273,7 +273,7 @@
         margin-top: -120px;
     }
 
-    @media (max-width: 399px) {
+    /* @media (max-width: 399px) {
         margin-top: -140px;
-    }
+    } */
 }
